--- a/Hugging_Face_Course_2_Models_(PyTorch).ipynb
+++ b/Hugging_Face_Course_2_Models_(PyTorch).ipynb
@@ -534,6 +534,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**IMPORTANT**\n",
+        "\n",
+        "When you feed tokenized sequences to a model like BERT in the transformers library, the model first takes the token IDs as input and converts them into embeddings. The embedding layer maps each token ID to a high-dimensional vector that represents the meaning of the token in the context of the input sequence.\n",
+        "\n",
+        "After the input tokens are mapped to embeddings, the model processes them through a series of layers to produce a final output. In the case of BERT, this involves passing the embeddings through a series of transformer layers, which apply a series of attention mechanisms to capture the relationships between different tokens in the input sequence.\n",
+        "\n",
+        "The output of the BERT model is a tensor containing a fixed number of embeddings for each input sequence. The number of embeddings is determined by the maximum sequence length that the model was trained on. If an input sequence is longer than this maximum length, it is truncated, and if it is shorter, it is padded with zeros to the maximum length.\n",
+        "\n",
+        "The final output of the BERT model can be used for a wide range of natural language processing tasks, such as text classification, named entity recognition, and question-answering. Different downstream tasks require different types of output from the model, and so the final layer(s) of the model are often fine-tuned specifically for the task at hand."
+      ],
+      "metadata": {
+        "id": "NZeU5F4ObXJw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
