--- a/FLAN_T5_RL.ipynb
+++ b/FLAN_T5_RL.ipynb
@@ -23,7 +23,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"WANDB_API_KEY\"] = \"154fbcf1f23a31cce72b7fd20288836164c4d9b5\""
+        "os.environ[\"WANDB_API_KEY\"] = \"\""
       ],
       "metadata": {
         "id": "KuDR9AmpORDF"
